--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linkz</title>
     <!-- <link rel="stylesheet" href="/styles/reset.css"> -->
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
 <body>
  <header>
     <h1>Links for my other stuff</h1>
